--- a/package.json
+++ b/package.json
@@ -10,22 +10,33 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-firebase/app": "^18.7.1",
     "@react-native-firebase/firestore": "^18.7.1",
+    "@react-native-firebase/messaging": "^18.7.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
+    "expo-clipboard": "~4.3.1",
+    "expo-firebase": "^0.0.0-alpha.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-linking": "~5.0.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modal": "^13.0.1",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
